--- a/GPE_Creation.ipynb
+++ b/GPE_Creation.ipynb
@@ -59,7 +59,7 @@
     "#dissolveBEC = \"dissolveBEC\"\n",
     "\n",
     "eraseOutput = \"Terr_BEC_Erase\"\n",
-    "mtsOutput = \"Terr_BEC_Erase_Singlepart\""
+    "mtsOutput = \"Terr_BEC_Erase_Multipart\""
    ]
   },
   {
@@ -67,15 +67,6 @@
    "metadata": {},
    "source": [
     "Testing subzone buffer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mtsOutput = \"Terr_BEC_Subzones_Multipart\""
    ]
   },
   {
@@ -323,37 +314,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def subzones(ppaList, gpeList):\n",
-    "    for ppa, gpe in zip(ppaList, gpeList):\n",
-    "        #generates save names for intersect\n",
-    "        folder = ppa.rsplit(\"\\\\\", 1)[0]\n",
-    "        ppaName = ppa.rsplit('\\\\', 1)[-1].split(\".\")[0]\n",
-    "        gpeName = gpe.rsplit('\\\\', 1)[-1].split(\".\")[0]\n",
-    "        ppaSave = os.path.join(folder, ppaName + \"_Subzones.shp\")\n",
-    "        gpeSave = os.path.join(folder, gpeName + \"_Subzones.shp\")\n",
-    "\n",
-    "        intersectedPpa = arcpy.Intersect_analysis([ppa, \"Terr_BEC_Subzones\"], ppaSave)\n",
-    "        intersectedGpe = arcpy.Intersect_analysis([gpe, \"Terr_BEC_Subzones\"], gpeSave)\n",
-    "        \n",
-    "        intersectedPpa = arcpy.CalculateField_management(intersectedPpa, \n",
-    "                                                         \"ppa_gpe\", \"'PPA'\", \"PYTHON3\", field_type = \"TEXT\")\n",
-    "        intersectedGpe = arcpy.CalculateField_management(intersectedGpe, \n",
-    "                                                         \"ppa_gpe\", \"'GPE'\", \"PYTHON3\", field_type = \"TEXT\")\n",
-    "        \n",
-    "        paceSaveSub = os.path.join(folder, ppaName + \"_PACE_Subzones.shp\")        \n",
-    "        arcpy.Merge_management([intersectedPpa, intersectedGpe], r\"memory\\mergePace\")\n",
-    "        arcpy.MultipartToSinglepart_management(r\"memory\\mergePace\",\n",
-    "                                       paceSaveSub)\n",
-    "        paceSave = os.path.join(folder, ppaName + \"_PACE.shp\")\n",
-    "        arcpy.Merge_management([ppa, gpe], paceSave)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
@@ -373,7 +333,7 @@
     "        paceSave = os.path.join(folder, ppaName + \"_PACE.shp\")\n",
     "        pace = arcpy.Merge_management([ppa, gpe], paceSave)\n",
     "\n",
-    "        intersectedPace = arcpy.Intersect_analysis([pace, \"Terr_BEC_Subzones\"], r\"memory\\intersectedPace\")\n",
+    "        intersectedPace = arcpy.Intersect_analysis([pace, \"Terr_BEC_Subzones\"], r\"scratch\\intersectedPace\")\n",
     "        \n",
     "        paceSaveSub = os.path.join(folder, ppaName + \"_PACE_Subzones.shp\")  \n",
     "        arcpy.MultipartToSinglepart_management(r\"memory\\intersectedPace\",\n",
