--- a/reportCard.Rmd
+++ b/reportCard.Rmd
@@ -1,16 +1,21 @@
 ---
-title: "How does Garabladi Complex compare to its surroundings?"
-output: html_document
+title: "How does `r params$inPark` compare to it's surroundings?"
+params:
+  inPark: Spats
+output:
+  word_document: default
+  html_document: default
+  pdf_document: default
 ---
-
-```{r, echo=FALSE, out.height="45%"}
-knitr::include_graphics("C:/Users/evanmuis.stu/Sync/Masters/Data/outputs/Gar/plots/Gar_PACE.png")
-```
 
 ```{r, echo=FALSE, results='hide', message = F, warning = F}
 library(tidyverse)
 library(scico)
+inPark <- params$inPark
+plotLoc <- paste0("outputs/", inPark, "/plots/")
 ```
+NCC these words currently don't mean anything.
+
 Land cover is similar to its surroundings.\
 Forest cover is lower than its surroundings.\
 Forest disturbances are lower than its surroundings.\
@@ -18,118 +23,108 @@ Forest structure is comparable to its surroundings.\
 Human habitation is lower than its surroundings.\
 Terrain is different than its surroundings.\
 
+\newpage
+
 # Land Cover
 
 ```{r, echo=FALSE, out.height="45%"}
-knitr::include_graphics("C:/Users/evanmuis.stu/Sync/Masters/Data/outputs/Gar/plots/gar_lcc_map.png")
+knitr::include_graphics(file.path(plotLoc, "lcc_map.png"))
 ```
 
-```{r, echo=FALSE, results = "hide", message = FALSE}
-Df <- read_csv("C:/Users/evanmuis.stu/Sync/Masters/Data/hmmDf.csv")
-
-
-##Calculating percent land cover in PPA vs. GPE in 2015 
-land_cover_2015 <- Df %>% 
-  filter(var == "HMM", year == "2015", class_name != "unclassifed")
-
-
-##Manning complex 
-mann <- land_cover_2015 %>% 
-  filter(park == "Gar") %>% 
-  group_by(ppa_gpe) %>%
-  mutate(percent_lcc = value / sum(value) * 100)
-#mann
-
-mann_graph <- ggplot(mann, aes(x = fct_rev(ppa_gpe), y = percent_lcc, fill = fct_rev(fct_reorder(class_name, percent_lcc)))) +
-  geom_bar(stat = "identity", position = "stack") +
-  labs(x = "Land Cover Class", y = "Percent of Total Area") +
-  guides(fill = guide_legend(reverse = TRUE)) +
-  scale_fill_scico_d(palette = "batlow") +
-    theme_void() +
-  theme() +  
-  theme(text = element_text(size = 13)) +
-  coord_polar(theta = "y") +
-  labs(fill = "Land Cover Class")
-
-mann_graph
+```{r, echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "lcc_plot.png"))
 ```
 
-# Forest Cover and Fragmentation
+\newpage
+# Forest Cover
 
+```{r, echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "lcc_fNoF_map.png"))
+```
 
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "lcc_fNoF_plot.png"))
+```
 
+\newpage
 # Forest Disturbances
 
 ```{r, echo=FALSE, out.height="45%"}
-knitr::include_graphics("C:/Users/evanmuis.stu/Sync/Masters/Data/outputs/Gar/plots/Disturbance Map.png")
+knitr::include_graphics(file.path(plotLoc, "disturbance_map.png"))
 ```
 
-```{r, echo=FALSE, results = "hide", message = FALSE}
-#Manning Complex disturbance analysis 
-mannDist2015 <- read_csv("outputs/disturbance.csv") %>%
-  filter(class != "Ag", class != "No Disturbance", parkName == "Gar")
-mannDist2015$ppa_gpe <- fct_rev(mannDist2015$ppa_gpe) 
-
-
-#plot
-mann_Dist15_graph <- mannDist2015 %>% ggplot(aes(x = reorder(class, per_dist), 
-                                                 y= per_dist, 
-                                                 fill = class, 
-                                                 colour = fct_rev(ppa_gpe))) +
-  geom_bar(position = "dodge", stat = "identity") + theme_bw() +
-  theme(legend.title = element_blank()) +
-  labs(y = "% of Area Disturbed", x = "Disturbance") +
-  theme(text = element_text(size = 13))+
-  coord_flip()
-
-mann_Dist15_graph <- mann_Dist15_graph + scale_fill_manual(values=c("#38A800", "#005CE6", "#000000", "#FFA900"), guide = F) + 
-  scale_colour_manual(values = c("black", "blue")) +
-  guides(colour = guide_legend(reverse = TRUE))
-
-mann_Dist15_graph
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "disturbance_plot.png"))
 ```
 
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "disturbance_years_plot.png"))
+```
 
+\newpage
 # Forest Structural Metrics
-
-```{r, echo=FALSE, out.height="45%"}
-knitr::include_graphics("C:/Users/evanmuis.stu/Sync/Masters/Data/outputs/Gar/plots/height.png")
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "structure_plot.png"))
 ```
 
-```{r, echo=FALSE, results = "hide", message = FALSE}
-gar_struct <- read_csv("outputs/gar_structure_2015.csv")
 
-varName = unique(gar_struct$varName)
-
-var2s = c("Biomass (t/ha)", "Cover (%)", "Height (m)", "Volume (m^3ha^-1)", "Structure (Elevation Covariance)", "Basal Area (m^2ha)")
-
-divideBy = c(100, 100, 1000, 10, 1000, 100)
-
-renameTib = tibble(varName, var2s, divideBy)
-
-gar_struct <- full_join(gar_struct, renameTib)
-
-gar_struct <- gar_struct %>% mutate(adjustMean = MEAN / divideBy)
-
-
-
-gar_struct %>% ggplot(aes(x = fct_rev(ppa_gpe), y = adjustMean)) +
-  geom_boxplot(outlier.alpha = 0) +
-  geom_jitter(position = position_jitter(0.2), alpha = 0.25) +
-  facet_wrap(var2s ~ ., scale = "free",
-              labeller = labeller(var2s = label_wrap_gen(25))) + 
-  labs(x = "", y = "Mean") +
-  theme_bw() +
-  theme(legend.title = element_blank(),
-        panel.grid.major = element_blank(),
-        panel.grid.minor = element_blank(),
-        panel.background = element_blank(),
-        axis.line = element_line(colour = "black"))
+## Basal Area
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "basal_area_map.png"))
 ```
 
+## Canopy Structure (Elevation Covariance)
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "elev_cv_map.png"))
+```
+
+## Gross Stem Volume
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "gross_stem_volume_map.png"))
+```
+
+## Canopy Height
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "loreys_height_map.png"))
+```
+
+## Canopy Cover
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "percentage_first_returns_above_2m_map.png"))
+```
+
+\newpage
 # Human Habitation
 
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "nightlights_map.png"))
+```
 
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "nightlights_plot.png"))
+```
 
+\newpage
 # Terrain
 
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "terrain_plot.png"))
+```
+
+## Elevation
+
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "elevation_map.png"))
+```
+
+## Slope
+
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "slope_map.png"))
+```
+
+## Aspect
+
+```{r, , echo=FALSE, out.height="45%"}
+knitr::include_graphics(file.path(plotLoc, "aspect_map.png"))
+```
